--- a/app.css
+++ b/app.css
@@ -26,11 +26,11 @@ body {
 }
 
 #mainNavbar .nav-link:hover {
-  color: #255eb3;
+  color: #ffc078;
 }
 
 #mainNavbar .navbar-brand:hover {
-  color: #255eb3;
+  color: #ffc078;
 }
 
 .img-container {
